# MAC211-Lab-1

./: README.md
Aulas/Exemplos/: hanoi32.asm  hanoi32.s
Aulas/Exemplos/autoconf/: config.status  configure  configure.ac  leiame.txt  pi.c
Aulas/Exemplos/autoconf/autom4te.cache/: output.0  requests  traces.0
Aulas/Exemplos/awk/: exemplo.awk  freq_palavras.awk  ordena.awk  report.awk
Aulas/Exemplos/bison/: Makefile  calcpr  calcpr.l  calcpr.tab.c  calcpr.tab.h  calcpr.y  calcpr.yy.c
Aulas/Exemplos/flex/: ex1_conta_lc.l  ex2_conta_lpc.l  ex3_pascal.l  ex4_cond_inicio.l  ex5_remove_comentario.l  ex6_conversor.l
EP1/: ep1  ep1_7994808.asm
TextosExtras/: Bash Reference Manual.html  Tabela de Syscalls do Linux.html
